force-app/main/default/objects/SBQQ__PriceRule__c/SBQQ__PriceRule__c.object-meta.xml
<CustomObject>
    <customHelpPage>SBQQ__PriceRuleHelp</customHelpPage>
    <description>Rule that affects pricing for an option or quote line</description>
    <label>Price Rule</label>
    <nameField>
        <label>Price Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Rules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>