force-app/main/default/objects/SBQQ__PriceRule__c/fields/SBQQ__ConditionsMet__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ConditionsMet__c</fullName>
    <description>Choose the behavior for your conditions: All is AND, Any is OR, Custom is a combination of AND/OR.</description>
    <inlineHelpText>Choose the behavior for your conditions: All is AND, Any is OR, Custom is a combination of AND/OR.</inlineHelpText>
    <label>Conditions Met</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>All</fullName><default>true</default><label>All</label></value>
            <value><fullName>Any</fullName><default>false</default><label>Any</label></value>
            <value><fullName>Custom</fullName><default>false</default><label>Custom</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>