force-app/main/default/objects/SBQQ__PriceRule__c/fields/SBQQ__EvaluationEvent__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__EvaluationEvent__c</fullName>
    <description>Event that causes this rule to be evaluated.</description>
    <inlineHelpText>Specify when this rule should be evaluated. Only to be used when targeting Quote Line and not supported on legacy calculator.</inlineHelpText>
    <label>Calculator Evaluation Event</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>On Initialization</fullName><default>false</default><label>On Initialization</label></value>
            <value><fullName>Before Calculate</fullName><default>false</default><label>Before Calculate</label></value>
            <value><fullName>On Calculate</fullName><default>true</default><label>On Calculate</label></value>
            <value><fullName>After Calculate</fullName><default>false</default><label>After Calculate</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>