force-app/main/default/objects/SBQQ__PriceRule__c/fields/SBQQ__TargetObject__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TargetObject__c</fullName>
    <description>Object that’s the target of the field update.</description>
    <inlineHelpText>Event during which this rule is evaluated.</inlineHelpText>
    <label>Evaluation Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Configurator</fullName><default>false</default><label>Configurator</label></value>
            <value><fullName>Calculator</fullName><default>false</default><label>Calculator</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>