force-app/main/default/objects/SBQQ__PriceRule__c/listViews/Active_Rules.listView-meta.xml
<ListView>
    <fullName>Active_Rules</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__TargetObject__c</columns>
    <columns>SBQQ__EvaluationEvent__c</columns>
    <columns>SBQQ__EvaluationOrder__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Rules</label>
</ListView>